defining building blocks of bulk data loading