@@ -56,8 +56,8 @@
           <source>18</source>
           <target>18</target>
           <compilerArgs>
-<!--            <arg>&#45;&#45;add-modules</arg>-->
-<!--            <arg>jdk.incubator.foreign</arg>-->
+            <arg>--add-exports</arg>
+            <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
