@@ -71,4 +71,32 @@
 
   </dependencies>
 
+  <build>
+    <!-- https://stackoverflow.com/questions/37350273/maven-compiler-plugin-in-parent-pom -->
+    <finalName>ParentPOMProj</finalName>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.7.0</version>
+          <configuration>
+            <source>18</source>
+            <target>18</target>
+            <compilerArgs>
+              <arg>--add-modules</arg>
+              <arg>jdk.incubator.foreign</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+              <arg>--add-opens</arg>
+              <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+
 </project>
